[package]
name = "nano-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#console_error_panic_hook = { default-features = false, version = "0.1.7" }
#console_log = { default-features = false, version = "1.0.0" }
js-sys = { default-features = false, path = "../wasm-bindgen/crates/js-sys" }
#log = { default-features = false, version = "0.4.20" }
wasm-bindgen = { default-features = false, path = "../wasm-bindgen" }
#wasm-bindgen-futures = { default-features = false, version = "0.4.37" }
#wee_alloc = { default-features = false, version = "0.4.5" }

[dependencies.web-sys]
default-features = false
path = "../wasm-bindgen/crates/web-sys"
features = [
  'Window',
]

# https://rustwasm.github.io/wasm-pack/book/cargo-toml-configuration.html
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = [ "-Oz", "--dce", "-g" ] # "-g"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'