[package]
name = "nano-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.lol_alloc]
version = "0.4.0"

[dependencies.js-sys]
default-features = false
#version = "0.3.64"
path = "../wasm-bindgen/crates/js-sys"

[dependencies.wasm-bindgen]
default-features = false
#version = "0.2.87"
path = "../wasm-bindgen"

[dependencies.web-sys]
default-features = false
#version = "0.3.64"
path = "../wasm-bindgen/crates/web-sys"
features = [
  'Window',
  'Document',
  'HtmlElement',
]

# https://rustwasm.github.io/wasm-pack/book/cargo-toml-configuration.html
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = [ "-Oz", "--dce", "-g" ] # "-g"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
debug = true